--- a/src/style.css
+++ b/src/style.css
@@ -15,8 +15,10 @@ section {
 }
 
 footer {
-    height: 500px;
     background-color: black;
+    color: white;
+    text-align: center;
+    padding: 80px;
 }
 nav {
     display: flex;
@@ -128,6 +130,13 @@ h2 {
     justify-content: space-around;
 }
 
+@media only screen and (max-width: 1000px){
+    .project-container {
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
+
 .sub-section-alternative {
     display: flex;
     flex-direction: column;
@@ -144,4 +153,47 @@ h2 {
 hr {
     margin-left: 20px;
     margin-right: 20px;
+}
+
+.project-link {
+    text-decoration: none;
+    color: #ef744b;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.hamburger {
+    display: none;
+}
+
+@media only scrren and (max-width: 1000px) {
+    .hamburger {
+        display: block;
+        border: 0;
+        background-color: 0;
+        color: white;
+        font-size: 30px;
+        margin: 20px;
+        align-self: flex-end;
+    }
+    ul {
+        display: none;
+        background-color: #2b2c38;
+        margin: 0px;
+    }
+    ul.show {
+        display: block;
+    }
+
+    nav {
+        display: flex;
+        flex-direction: column-reverse;
+        background-color: #2b2c38;
+    }
+    .logo {
+        display: none;
+    }
 }
