--- a/src/style.css
+++ b/src/style.css
@@ -130,6 +130,8 @@ h2 {
     justify-content: space-around;
 }
 
+
+
 @media only screen and (max-width: 1000px){
     .project-container {
         display: flex;
@@ -169,11 +171,15 @@ a {
     display: none;
 }
 
-@media only scrren and (max-width: 1000px) {
+.hamburger:focus{
+    outline: 0;
+}
+
+@media only screen and (max-width: 1000px) {
     .hamburger {
         display: block;
         border: 0;
-        background-color: 0;
+        background-color: transparent;
         color: white;
         font-size: 30px;
         margin: 20px;
