--- a/src/style.css
+++ b/src/style.css
@@ -3,15 +3,105 @@ body {
     margin: 0;
 }
 
+a:hover {
+    color: rgb(255, 236, 169);
+    transition: 0.7s ease;
+}
+
 section {
     background-color: white;
 }
+.description {
+    padding: 20px;
+}
+
+.project_info {
+    background-color: rgb(204, 167, 167);
+    display: block;
+    justify-content: space-around;
+    padding: 80px;
+}
+
+.project_info:hover {
+    background-color: rgb(229, 199, 141);
+    transition: 0.7s ease;
+}
+
+.project_demo {
+    width: 220px;
+    height: 150px;
+    transition: width 0.7s ease-in-out, height 0.7s ease-in-out;
+}
+
+.project_demo:hover {
+    width: 700px;
+    height: 450px;
+    /*transition: 0.7s ease-in-out;*/
+}
+
+.project_demo:visited {
+    width: 600px;
+    height: 450px;
+    transition: 0.7s ease-in-out;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+    
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    background-color: rgb(204, 167, 167);
+    border-radius: 10px 10px 0px 0px;
+    width: 700px;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+  .dropdown a:hover {
+    color: rgb(255, 236, 169);
+    transition: 0.7s ease;
+  }
+  
+
+.making_points {
+    font-size: 20px;
+}
 
 .hero {
-    background-color: #1c1d25;
+    width: 100%;
+    background-image: linear-gradient(rgba(204, 167, 167, 0.7), rgba(229, 199, 141, 0.7)), url("./php_bkg_image.png");
+    background-position: center;
+    background-size: cover;
+    position: relative;
     height: 100vh;
     color: white;
-    font-size: 40px;
+    transition: background-color 0.5s ease-in-out;
+}
+
+
+.hero2 {
+    width: 100%;
+    background: linear-gradient(to right, rgba(204, 167, 167, 0.5), rgba(229, 199, 141, 0.5));
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    height: 100vh;
+    color: white;
+    transition: background-color 0.5s ease-in-out;
 }
 
 footer {
@@ -21,9 +111,20 @@ footer {
     padding: 80px;
 }
 nav {
+    background-color: rgb(204, 167, 167);
     display: flex;
     justify-content: space-between;
 }
+
+nav:hover{
+    background-color: rgb(229, 199, 141);
+    transition: background-color 0.5s ease-in-out;
+}
+
+nav a:hover {
+    text-decoration: overline;
+}
+
 ul {
     display: flex;
     list-style-type: none;
@@ -80,6 +181,7 @@ p {
 
 .button:hover {
     background-color: #ef744b;
+    transition: 0.7s ease;
 }
 
 .button:active {
@@ -89,6 +191,7 @@ p {
 
 .socials {
     padding-bottom: 200px;
+    padding-right: 50px;
 }
 
 .logo {
@@ -96,15 +199,20 @@ p {
     margin: 30px;
 }
 
-
 .social-item2 {
     margin: 20px;
 }
 
 .sub-section{
+    background-color: rgb(204, 167, 167);
     display: flex;
     justify-content: space-around;
     padding: 80px;
+}
+
+.sub-section:hover {
+    background-color: rgb(229, 199, 141);
+    transition: 0.7s ease;
 }
 
 h2 {
@@ -123,7 +231,7 @@ h2 {
 
 .project-card {
     width: 300px;
-    height: 500px;
+    height: 600px;
     box-shadow: 5px 5px 20px;
     margin: 10px;
 }
@@ -131,6 +239,15 @@ h2 {
 .project-container{
     display: flex;
     justify-content: space-around;
+}
+
+.project-container a:hover {
+    font-size: 20px;
+    background-color: rgb(255, 236, 169);
+    color: white;
+    padding: 5px;
+    border-radius: 10px;
+    transition: 0.7s ease;
 }
 
 
@@ -162,7 +279,7 @@ hr {
 
 .project-link {
     text-decoration: none;
-    color: #ef744b;
+    color: white;
 }
 
 a {
