added more content and details for LinkUps

--- a/src/plan.css
+++ b/src/plan.css
@@ -5,6 +5,14 @@ body {
     color: rgb(229, 199, 141); /*background-active*/
 }
 
+.linkups {
+    color: rgb(38, 10, 87);
+    color: rgb(45, 7, 160); /*background*/
+    color: rgb(35, 147, 248); /*text*/
+    color: rgb(154, 224, 248); /*text-active*/
+    color: rgb(184, 154, 248); /*background-active*/
+}
+
 
 When explaining your web development project in the portfolio section, it's important to provide a clear and concise overview of the project while highlighting its key features and your role in its development. Here are some steps to help you effectively explain your web development project:
 
@@ -29,3 +37,10 @@ When explaining your web development project in the portfolio section, it's impo
 Remember to use clear and concise language, focusing on the most relevant information. Additionally, consider using visual elements such as screenshots, diagrams, or links to the live website or project repository to further illustrate your work.
 
 Certifications with dates and Summaries
+
+
+Add definitions and links to each IDEs
+logos and colors
+
+Linkups
+
