--- a/src/style-SekouHP2.css
+++ b/src/style-SekouHP2.css
@@ -3,10 +3,6 @@ body {
     margin: 0;
 }
 
-a {
-    color: rgb(207, 199, 168);
-}
-
 a:hover {
     color: rgb(255, 236, 169);
     transition: 0.7s ease;
@@ -28,18 +24,6 @@ section {
 
 .project_info:hover {
     background-color: rgb(229, 199, 141);
-    transition: 0.7s ease;
-}
-
-.project_linkups {
-    background-color: rgb(38, 10, 87);
-    display: block;
-    justify-content: space-around;
-    padding: 80px;
-}
-
-.project_linkups:hover {
-    background-color: rgb(35, 147, 248);
     transition: 0.7s ease;
 }
 
@@ -72,7 +56,7 @@ section {
     position: absolute;
     z-index: 1;
     background-color: rgb(204, 167, 167);
-    border-radius: 0px 10px 10px 10px;
+    border-radius: 10px 10px 0px 0px;
     width: 700px;
   }
   
@@ -112,17 +96,6 @@ section {
 .hero2 {
     width: 100%;
     background: linear-gradient(to right, rgba(204, 167, 167, 0.5), rgba(229, 199, 141, 0.5));
-    background-position: center;
-    background-size: cover;
-    position: relative;
-    height: 100vh;
-    color: white;
-    transition: background-color 0.5s ease-in-out;
-}
-
-.hero_linkups {
-    width: 100%;
-    background: linear-gradient(to right, rgba(62, 11, 217, 0.5), rgba(184, 154, 248, 0.5));
     background-position: center;
     background-size: cover;
     position: relative;
@@ -242,20 +215,6 @@ p {
     transition: 0.7s ease;
 }
 
-.sub-section_linkups{
-    background-color: rgb(38, 10, 87);
-    display: flex;
-    justify-content: space-around;
-    padding: 80px;
-}
-
-.sub-section_linkups:hover {
-    background-color: rgb(35, 147, 248);
-    transition: 0.7s ease;
-}
-
-
-
 h2 {
     font-size: 50px;
 }
@@ -336,27 +295,19 @@ a {
     outline: 0;
 }
 
-/*abbr[title] {
-    text-decoration: underline;
-    border-radius: 10px;
-    background-color: rgb(38, 10, 87);
-    color: rgb(35, 147, 248); 
-}*/
-
-
 @media only screen and (max-width: 1000px) {
     .hamburger {
         display: block;
         border: 0;
         background-color: transparent;
-        color: black;
+        color: white;
         font-size: 30px;
         margin: 20px;
         align-self: flex-end;
     }
     ul {
         display: none;
-        background-color: rgb(229, 199, 141);
+        background-color: #2b2c38;
         margin: 0px;
     }
     ul.show {
@@ -366,7 +317,7 @@ a {
     nav {
         display: flex;
         flex-direction: column-reverse;
-        background-color: rgb(229, 199, 141);
+        background-color: #2b2c38;
     }
     .logo {
         display: none;
