--- a/src/plan.css
+++ b/src/plan.css
@@ -13,6 +13,13 @@ body {
     color: rgb(184, 154, 248); /*background-active*/
 }
 
+.careerization {
+    color: rgba(17, 245, 227, 1); /*background-active #11F5E3*/
+    color: rgba(43, 117, 111, 1); /*text-active 2B756F*/
+    color: rgba(91, 247, 234, 1); /*text 5BF7EA*/
+    color: rgba(14, 194, 179, 1); /*background #OEC2B3*/
+}
+
 
 When explaining your web development project in the portfolio section, it's important to provide a clear and concise overview of the project while highlighting its key features and your role in its development. Here are some steps to help you effectively explain your web development project:
 
@@ -44,3 +51,12 @@ logos and colors
 
 Linkups
 
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
