--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,10 @@
     color: white;
 }
 
+.all_text_career {
+    color: rgba(0, 0, 0, 1);
+}
+
 body {
     font-family: 'Noto Sans', sans-serif;
     margin: 0;
@@ -47,15 +51,29 @@ section {
     transition: 0.7s ease;
 }
 
+.project_career {
+    background-color: rgba(14, 194, 179, 1);
+    display: block;
+    justify-content: space-around;
+    padding: 80px;
+}
+
+.project_career:hover {
+    background-color: rgba(17, 245, 227, 1);
+    transition: 0.7s ease;
+}
+
 .project_demo {
     width: 220px;
     height: 150px;
+    border-radius: 80px;
     transition: width 0.7s ease-in-out, height 0.7s ease-in-out;
 }
 
 .project_demo:hover {
     width: 700px;
     height: 450px;
+    border-radius: 80px;
     /*transition: 0.7s ease-in-out;*/
 }
 
@@ -127,6 +145,17 @@ section {
 .hero_linkups {
     width: 100%;
     background: linear-gradient(to right, rgba(62, 11, 217, 0.5), rgba(184, 154, 248, 0.5));
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    height: 100vh;
+    color: white;
+    transition: background-color 0.5s ease-in-out;
+}
+
+.hero_career {
+    width: 100%;
+    background: linear-gradient(to right, rgba(14, 194, 179, 0.5), rgba(17, 245, 227, 0.5));
     background-position: center;
     background-size: cover;
     position: relative;
@@ -255,6 +284,18 @@ p {
 
 .sub-section_linkups:hover {
     background-color: rgb(35, 147, 248);
+    transition: 0.7s ease;
+}
+
+.sub-section_career{
+    background-color: rgba(14, 194, 179, 1);
+    display: flex;
+    justify-content: space-around;
+    padding: 80px;
+}
+
+.sub-section_career:hover {
+    background-color: rgba(17, 245, 227, 1);
     transition: 0.7s ease;
 }
 
